@@ -17,6 +17,7 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,13 +29,18 @@ public class OrderItemServiceImpl implements OrderItemService {
 
     @Override
     public OrderItemDTO create(OrderItemCreateDTO dto) {
+
         Product product = productRepository.findById(dto.getProductId())
                 .orElseThrow(() -> new RuntimeException("Produit introuvable"));
 
         OrderItem item = orderItemMapper.toEntity(dto);
+
         item.setProduct(product);
         item.setUnitPrice(product.getUnitPrice());
-        item.setLineTotal(product.getUnitPrice().multiply(BigDecimal.valueOf(dto.getQuantity())));
+        item.setLineTotal(
+                product.getUnitPrice()
+                        .multiply(BigDecimal.valueOf(dto.getQuantity()))
+        );
 
         OrderItem saved = orderItemRepository.save(item);
         return orderItemMapper.toDTO(saved);
@@ -47,8 +53,11 @@ public class OrderItemServiceImpl implements OrderItemService {
 
         orderItemMapper.updateEntityFromDTO(dto, item);
 
-        // recalcul du lineTotal si quantity a changé
-        item.setLineTotal(item.getUnitPrice().multiply(BigDecimal.valueOf(item.getQuantity())));
+        // recalcul du total
+        item.setLineTotal(
+                item.getUnitPrice()
+                        .multiply(BigDecimal.valueOf(item.getQuantity()))
+        );
 
         OrderItem updated = orderItemRepository.save(item);
         return orderItemMapper.toDTO(updated);
@@ -63,10 +72,10 @@ public class OrderItemServiceImpl implements OrderItemService {
 
     @Override
     public void delete(String id) {
-        if (!orderItemRepository.existsById(id)) {
-            throw new RuntimeException("OrderItem introuvable");
-        }
-        orderItemRepository.deleteById(id);
+        OrderItem item = orderItemRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("OrderItem introuvable"));
+
+        orderItemRepository.delete(item);
     }
 
     @Override
@@ -77,17 +86,17 @@ public class OrderItemServiceImpl implements OrderItemService {
 
     @Override
     public Page<OrderItemDTO> getByOrderId(String orderId, Pageable pageable) {
+
         List<OrderItemDTO> items = orderItemRepository.findByOrderId(orderId)
                 .stream()
                 .map(orderItemMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
 
         int start = Math.min((int) pageable.getOffset(), items.size());
-        int end = Math.min((start + pageable.getPageSize()), items.size());
+        int end = Math.min(start + pageable.getPageSize(), items.size());
 
         List<OrderItemDTO> subList = items.subList(start, end);
 
         return new PageImpl<>(subList, pageable, items.size());
     }
-
 }
